--- a/VeloMax/VeloMax.csproj
+++ b/VeloMax/VeloMax.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.3.0" />
+    <PackageReference Include="ConsoleAppVisuals" Version="3.5.2" />
   </ItemGroup>
 
 </Project>
